--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://jjongsu.github.io/gameD/",
+    "homepage": "https://jjongsu.github.io/gameD",
     "name": "gamed",
     "private": true,
     "version": "0.0.0",
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "phaser": "^3.60.0",
+        "phaser3-rex-plugins": "^1.60.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
