--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build",
+        "server": "nodemon server.ts"
     },
     "dependencies": {
+        "eventemitter3": "^5.0.1",
         "phaser": "^3.60.0",
         "phaser3-rex-plugins": "^1.60.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "socket.io-client": "^4.7.2"
     },
     "devDependencies": {
+        "@types/express": "^4.17.17",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
